[package]
name = "solana-escrow"
version = "0.1.0"
authors = ["alexjperkins <alexjperkins@hotmail.co.uk>"]
edition = "2018"

[dependencies]
solana-program = "=1.9.1"
thiserror = "^1.0.30"
spl-token = { version = "^3.1.1", features = ["no-entrypoint"]}
arrayref = "^0.3.6"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.9.1"
solana-sdk = "=1.9.1"
solana-validator = "=1.9.1"

[lib]
crate-type = ["cdylib", "lib"]
